[FIX] Remove circular dependencies and use of collectors